Fix shadow placement on fileview on newer gambas

--- a/.settings
+++ b/.settings
@@ -1628,7 +1628,7 @@ SearchString=True
 
 [OpenFile]
 File[1]=".src/Classi/MplayerClass.class:29.73"
-Active=18
+Active=24
 File[2]=".src/Classi/SettingsClass.class:19.0"
 File[3]=".src/Form/VideoEqualizer.form"
 File[4]=".src/Form/VideoEqualizer.class:10.0"
@@ -1645,11 +1645,11 @@ File[14]=".src/Form/AudioVideoCodecs.form"
 File[15]=".src/Form/AudioVideoCodecs.class:23.56"
 File[16]=".src/Form/AudioForm.form"
 File[17]=".src/Form/GeneralOptions.form"
-File[18]=".src/Form/FMain.class:21.6615"
+File[18]=".src/Form/FMain.class:19.223"
 File[19]=".src/Form/GeneralOptions.class:19.0"
-File[20]=".src/Form/AFiltersCfg.class:19.0"
+File[20]=".src/Form/AFiltersCfg.class:60.495"
 File[21]=".src/Form/Chains.form"
-File[22]=".src/Form/Chains.class:41.2"
+File[22]=".src/Form/Chains.class:7.57"
 File[23]=".src/Form/AddUriForm.form"
 File[24]=".src/Form/AFiltersCfg.form"
 File[25]=".src/Form/AllOptions.form"
@@ -1697,7 +1697,8 @@ File[66]=".src/Form/CoverManager.class:34.8"
 File[67]=".src/Form/FormLyrics.class:20.25"
 File[68]=".src/Classi/dvbsnoop_class.class:0.9"
 File[69]=".src/Form/zzzFake.class:6.43"
-Count=69
+Count=70
+File[70]="AA_ToDo:22.294"
 
 [Watches]
 Count=4
